alignment fixed for increment buttons.

--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -80,6 +80,11 @@
     input::-webkit-inner-spin-button {
       -webkit-appearance: none;
     }
+    .increment-control {
+      display: grid;
+      place-items: center;
+      padding: 0.3em;
+    }
   }
   .cart-btn {
     display: flex;
